[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/PC Computer - Undertale - Ruins.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Puertas.gd" type="Script" id=2]

[sub_resource type="TileSet" id=1]
0/name = "PC Computer - Undertale - Ruins.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 320, 256, 288, 160 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 40 )

[node name="Puertas" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 3.6, 3.8 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="Puerta 1" type="Area2D" parent="."]
position = Vector2( 510, 115 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta 1"]
shape = SubResource( 2 )

[node name="Puerta 2" type="Area2D" parent="."]
position = Vector2( 860, 520 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta 2"]
shape = SubResource( 3 )

[node name="Puerta 3" type="Area2D" parent="."]
position = Vector2( 160, 520 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta 3"]
shape = SubResource( 3 )

[node name="Puerta 4" type="Area2D" parent="."]
position = Vector2( 125, 150 )
rotation = -0.820305
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta 4"]
shape = SubResource( 2 )

[node name="Puerta 5" type="Area2D" parent="."]
position = Vector2( 900, 150 )
rotation = 0.820305
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta 5"]
shape = SubResource( 2 )

[node name="Puerta 6" type="Area2D" parent="."]
position = Vector2( 750, 550 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta 6"]
shape = SubResource( 2 )

[node name="Puerta 7" type="Area2D" parent="."]
position = Vector2( 270, 550 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta 7"]
shape = SubResource( 2 )

[node name="Puerta 8" type="Area2D" parent="."]
position = Vector2( 645, 335 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta 8"]
shape = SubResource( 3 )

[node name="Puerta 9" type="Area2D" parent="."]
position = Vector2( 375, 335 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta 9"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Puerta 1" to="." method="_on_Puerta_1_body_entered"]
[connection signal="body_entered" from="Puerta 2" to="." method="_on_Puerta_2_body_entered"]
[connection signal="body_entered" from="Puerta 3" to="." method="_on_Puerta_3_body_entered"]
[connection signal="body_entered" from="Puerta 4" to="." method="_on_Puerta_4_body_entered"]
[connection signal="body_entered" from="Puerta 5" to="." method="_on_Puerta_5_body_entered"]
[connection signal="body_entered" from="Puerta 6" to="." method="_on_Puerta_6_body_entered"]
[connection signal="body_entered" from="Puerta 7" to="." method="_on_Puerta_7_body_entered"]
[connection signal="body_entered" from="Puerta 8" to="." method="_on_Puerta_8_body_entered"]
[connection signal="body_entered" from="Puerta 9" to="." method="_on_Puerta_9_body_entered"]
